# Pypeline

./: CMakeLists.txt  common.h  conanfile.txt  core.cpp  fileio.cpp  gui.cpp  main.cpp  strman.cpp
